# mysite

./: pyproject.toml
.github/workflows/: backend.yml
backend/: .flake8  README.md  pyproject.toml
backend/mysite/: manager.py  settings.py
backend/mysite/accounts/: admin.py  apps.py  forms.py  models.py
backend/mysite/accounts/migrations/: 0001_initial.py  0002_user_username.py
backend/mysite/blog/: tests.py
backend/mysite/tests/: test_manager.py
