[tool.poetry]
name = "mysite-blog"
version = "0.1.0"
description = "Cirando blog seguin o livro django5 by examples"
authors = ["Vlamidir Serra <vladimirmaciel@gmail.com>"]
license = "NIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
