[tool.poetry]
name = "mysite-blog"
version = "0.1.0"
description = "Cirando blog seguin o livro django5 by examples"
authors = ["Vlamidir Serra <vladimirmaciel@gmail.com>"]
license = "NIT"
readme = "README.md"
packages = [
    {include = "mysite"}
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
FAIL_INVALID_TEMPLATE_VARS = true
python_files = ["test_*.py"]
pythonpath = "."